Playing with buttons - with icon alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
 }
+
+.anticon > svg {
+  vertical-align: baseline;
+}
